src/snapshots/jj_pr__tests__sync@hydro-3.json.gz.snap
---
source: src/tests.rs
assertion_line: 129
expression: plan_sync(&f)
input_file: src/fixtures/hydro-3.json.gz
---
stamp #2798 trailer on wnkkzpnlkwzt
push: #2801 (mingwei/delete-state-api-usage), #2812 (mingwei/delete-subgraph-id), #2798 (mingwei/delete-intermediate-subgraph)
  update #2812 title -> "cleanup: remove SubgraphId, SubgraphTag, LoopId, LoopTag, simplify StateLifespan"
  update #2798 title -> "Address PR #2798 review comments: extract helper methods, fix stale comments"
update #2801 (mingwei/delete-state-api-usage) base -> main
