src/snapshots/jj_pr__tests__sync@hydro-before.json.snap
---
source: src/tests.rs
expression: plan_sync(&f)
input_file: src/fixtures/hydro-before.json
---
stamp #2810 trailer on skzzksouynsz
stamp #2811 trailer on uxksyklwwwzn
stamp #2811 trailer on wttuzpxxzqkx
stamp #2801 trailer on zktzkwxpksou
stamp #2801 trailer on qunzttmwqmpw
stamp #2801 trailer on pqqmvykumvoq
stamp #2801 trailer on trlnmrvmuqnt
stamp #2801 trailer on lqxnymrprnpl
stamp #2801 trailer on nmqrowzwxvpn
stamp #2798 trailer on xqxnxvxoyltz
push: #2801 (mingwei/delete-state-api-usage), #2810 (mingwei/delete-metrics-slotvec), #2811 (mingwei/delete-schedule-subgraph-args)
update #2801 (mingwei/delete-state-api-usage) base -> mingwei/delete-intermediate-subgraph
update #2810 (mingwei/delete-metrics-slotvec) base -> mingwei/delete-state-api-usage
update #2811 (mingwei/delete-schedule-subgraph-args) base -> mingwei/delete-state-api-usage
