src/snapshots/jj_pr__tests__sync@hydro-many-closed-1780070904.json.gz.snap
---
source: src/tests.rs
expression: plan_sync(&f)
input_file: src/fixtures/hydro-many-closed-1780070904.json.gz
---
push: #2903 (mingwei/paxos-ref)
