src/snapshots/jj_pr__tests__sync@hydro-merged-many.json.gz.snap
---
source: src/tests.rs
expression: plan_sync(&f)
input_file: src/fixtures/hydro-merged-many.json.gz
---
abandon merged #2801 (mingwei/delete-state-api-usage already deleted)
simplify redundant parent edges of merge commits (if any)
push: #2829 (mingwei/singleton-refs-dfir), #2811 (mingwei/delete-schedule-subgraph-args), #2810 (mingwei/delete-metrics-slotvec), #2812 (mingwei/delete-subgraph-id)
